--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Portfolio baayvin</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- linking css  -->
+  <!-- lien  css  -->
   <link rel="stylesheet" href="style.css">
   <!-- bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-    <!-- load javascript after loading all html content -->
-    <!--<script src="script/script.js"></script> -->
+    
 </body>
 
 <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
