--- a/hangmanweb.html
+++ b/hangmanweb.html
@@ -1,7 +1,6 @@
 
 
 <head>
-<<<<<<< HEAD
 
     <title>Hangman</title>
     <link href="../static/style/style.css" rel="stylesheet">
@@ -13,11 +12,7 @@
 <link href="https://fonts.googleapis.com" rel="preconnect">
 <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
 <link href="https://fonts.googleapis.com/css2?family=Rubik+Marker+Hatch&display=swap" rel="stylesheet">
-=======
-    <h1>Hangman Game</h1>
-    <title>Document</title>  
-</head>  
->>>>>>> f19e00d2042ecd296b6e3269f93a1e237a87b05b
+</head>
 <p> Cliquer sur jouer pour pouvoir acceder au  jeu </p>
 <style>
     *{
@@ -94,8 +89,8 @@ p{
     </svg>
 
     <!-- "play - button" open hangman.html -->
+    <a href="/hangman"><button class="playbutton">Jouer</button></a>
 
 
-
-    <a href="/hangman"> Jouer </a>
+    <!--<a href="/hangman"> Jouer </a>-->
 </div>
