--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
         <br>
         <div class="row">
-            <div class="col-lg-4 mt-4">
+            <div class="col-lg-4 mt-4"> 
                 <div class="card portfolioContent">
                     <img class="card-img-top" src="images/nike.webp" alt="Card image" style="width:100%" height="277px">
                     <div class="card-body">
@@ -150,7 +150,7 @@
                             <a href="/nike.html" class="btn btn-success">Link</a>
                             
                         </div>
-                    </div>
+                    </div>  
                 </div>
             </div>
 
@@ -216,7 +216,7 @@
                         <img class="card-img-top" src="images/logo_java.jpg" alt="Card image" style="width:100%" height="223px">
                         <div class="card-body">
                             <h4 class="card-title">Java</h4>
-                            <p class="card-text">J'ai aussi pratiquer plusieurs cours de résaux peandant l'année. </p>
+                            <p class="card-text">J'ai aussi pratiquer plusieurs cours de java peandant l'année. </p>
                             <div class="text-center">
                                 <a href="https://www.programiz.com/java-programming/examples" class="btn btn-success">Link</a>
                             </div>
@@ -229,7 +229,7 @@
     <!-- contact -->
     <section id="contact">
         <div class=" contactContent">
-            <h1 class="text-center">Contact Me</h1>
+            <h1 class="text-center">Contact Me</h1>  
 
             <div class="row mt-4">
                 <div class="col-lg-6"> 
