--- a/bloc/groupie.html
+++ b/bloc/groupie.html
@@ -48,7 +48,7 @@
                         <h4 class="card-title">Groupie_tracker </h4>
                         <p class="card-text">On a fait un cahiers des charges pour notre vous pouvez le télecharger.</p>
                         <div class="text-center">
-                            <a href="https://ytrack.learn.ynov.com/git/walberic/GroopieTracker" class="btn btn-success">Link </a>
+                            <a href="https://github.com/baayvin17/Groupie-Tracker" class="btn btn-success">Link </a>
                             
                         </div>
                     </div>
