--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <h4 class="card-title">Groupie_tracker</h4>
                         <p class="card-text">On vien aussi de finir un nouveau projet le Groupie_tracker.</p>
                         <div class="text-center">
-                            <a href="https://www.psg.fr/" class="btn btn-success">Link</a>
+                            <a href="/bloc/groupie.html" class="btn btn-success">Link</a>
                         </div>
                     </div>
                 </div>
