--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
 
             <div class="col-lg-4 mt-4">                                 
                 <div class="card portfolioContent"> 
-                    <img class="card-img-top" src="images/Electronique.jpg" alt="Card image" style="width:100%" height="277px">
+                    <img class="card-img-top" src="images/logo-manette-jeu-dessine-main_23-2148236559.webp" alt="Card image" style="width:100%" height="277px">
                     <div class="card-body">
-                        <h4 class="card-title">Electronique</h4>
+                        <h4 class="card-title">Jeu</h4>
                         <p class="card-text">Mon autre Ydays est celui de l'Initialisation à l'Electronique.</p>
                         <div class="text-center">
-                            <a href="https://fr.wikipedia.org/wiki/Microcontr%C3%B4leur" class="btn btn-success">Link</a>
+                            <a href="/bloc/index.html" class="btn btn-success">Link</a>
                         </div>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                             <h4 class="card-title">Linux </h4>
                             <p class="card-text">J'ai  pratiquer le Linux peandant le premier semestre a ynov.</p>
                             <div class="text-center">
-                                <a href="https://fr.wikipedia.org/wiki/Linux" class="btn btn-success">Link </a>
+                                <a href="/bloc/linux.html" class="btn btn-success">Link </a>
                                 
                             </div>
                         </div>
@@ -218,7 +218,7 @@
                             <h4 class="card-title">Java</h4>
                             <p class="card-text">J'ai aussi pratiquer plusieurs cours de java peandant l'année. </p>
                             <div class="text-center">
-                                <a href="https://www.programiz.com/java-programming/examples" class="btn btn-success">Link</a>
+                                <a href="/bloc/java.html" class="btn btn-success">Link</a>
                             </div>
                         </div>
                     </div>
@@ -261,6 +261,7 @@
                 <a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/baayvin-soubramanien-b18090252/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://www.twitch.tv/" target="_blank"><i class="fab fa-twitch"></i></a>
+                <a href="https://github.com/baayvin17?tab=repositories" target="_blank"><i class="fa fa-github" style="font-size:36px;color:rgb(7, 1, 1)"></i>
             </div>
         </div>
     </footer>
