--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
 
           <div class="col-lg-8">
-              <p> Je m'apelle BAAYVIN SOUBRAMANIEN j'ai 19 ans est je suis en 1ere année en Informatique chez Paris Ynov Campus. Par le passée l y an 1 ans j'ai obtenu mon Bacalauréat Scientifique avec les spécialités Mathématiques et Science de l'Ingénieur.
+              <p> Je m'apelle BAAYVIN SOUBRAMANIEN j'ai 19 ans est je suis en 1ere année en Informatique chez Paris Ynov Campus. Par le passée il y an 1 ans j'ai obtenu mon Bacalauréat Scientifique avec les spécialités Mathématiques et Science de l'Ingénieur.
                   
               </p>
               <div class="row mt-3">
@@ -103,7 +103,7 @@
                     <img class="card-img-top" src="images/go.jpg" alt="Card image" style="width:100%" height="277px">
                     <div class="card-body">
                         <h4 class="card-title">Hangman_go </h4>
-                        <p class="card-text">J'ai  pratiquer le Golang peandant l'année ainsi qu'une piscine pendant 1 mois pour apprendres les bases.</p>
+                        <p class="card-text">J'ai  pratiquer le Golang peandant l'année pour à la fin réaliser un jeu.</p>
                         <div class="text-center">
                             <a href="/bloc/exemple.html" class="btn btn-success">Link </a>
                             
@@ -130,7 +130,7 @@
                     <img class="card-img-top" src="images/résaux.avif" alt="Card image" style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">Résaux</h4>
-                        <p class="card-text">J'ai aussi pratiquer plusieurs cours de résaux peandant l'année. </p>
+                        <p class="card-text">J'ai aussi pratiquer des cours de résaux , vous pouvez voir quelques exercices. </p>
                         <div class="text-center">
                             <a href="/bloc/resaux.html" class="btn btn-success">Link</a>
                         </div>
@@ -159,7 +159,7 @@
                     <img class="card-img-top" src="images/logo-manette-jeu-dessine-main_23-2148236559.webp" alt="Card image" style="width:100%" height="277px">
                     <div class="card-body">
                         <h4 class="card-title">Jeu</h4>
-                        <p class="card-text">Mon autre Ydays est celui de l'Initialisation à l'Electronique.</p>
+                        <p class="card-text">Nous devion réaliser un jeu en html css et javascript que vous pouvez trouver ci-dessous.</p>
                         <div class="text-center">
                             <a href="/bloc/index.html" class="btn btn-success">Link</a>
                         </div>
@@ -216,7 +216,7 @@
                         <img class="card-img-top" src="images/logo_java.jpg" alt="Card image" style="width:100%" height="223px">
                         <div class="card-body">
                             <h4 class="card-title">Java</h4>
-                            <p class="card-text">J'ai aussi pratiquer plusieurs cours de java peandant l'année. </p>
+                            <p class="card-text">Vous pouvez retrouver notre que nous avons réaliser en java. </p>
                             <div class="text-center">
                                 <a href="/bloc/java.html" class="btn btn-success">Link</a>
                             </div>
