--- a/bloc/vm.html
+++ b/bloc/vm.html
@@ -18,7 +18,7 @@
 		<section>
 			<h2>Voici mon proget en linux notre machine virtuelle.</h2>
 			<p</p>
-			<img class="card-img-top" src="/images/"alt="Card image" style="width:70%" height="100%"> 
+			<img class="card-img-top" src="C:\Users\baayv\OneDrive\Documents\GitHub\Portfolio_baayvin\bloc\images\123.png"alt="Card image" style="width:70%" height="100%"> 
 			
 			
 			<h3></h3>
