--- a/bloc/groupie.html
+++ b/bloc/groupie.html
@@ -1,5 +1,5 @@
   <!-- lien  css  -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="stylegolan.css">
   <!-- bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -48,8 +48,13 @@
                         <h4 class="card-title">Groupie_tracker </h4>
                         <p class="card-text">On a fait un cahiers des charges pour notre vous pouvez le télecharger.</p>
                         <div class="text-center">
-                            <a href="https://github.com/baayvin17/Groupie-Tracker" class="btn btn-success">Link </a>
                             
+                            <div class="container">
+                                <button type="button" class="button"
+                                    onclick="window.location.href='https://github.com/baayvin17/Groupie-Tracker'">
+                                    <span>Voir!</span>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
