--- a/bloc/linux.html
+++ b/bloc/linux.html
@@ -1,5 +1,5 @@
   <!-- lien  css  -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="stylegolan.css">
   <!-- bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -47,7 +47,13 @@
                     <div class="card-body">Machine Virtuelle </h4>
                         <p class="card-text"></p>
                         <div class="text-center">
-                            <a href="/bloc/vm.html" class="btn btn-success">Link </a>
+                            
+                            <div class="container">
+                                <button type="button" class="button"
+                                    onclick="window.location.href='/bloc/vm.html'">
+                                    <span>Voir!</span>
+                                </button>
+                            </div>
                             
                         </div>
                     </div>
