--- a/bloc/resaux.html
+++ b/bloc/resaux.html
@@ -1,9 +1,9 @@
   <!-- lien  css  -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="stylegolan.css">
   <!-- bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- couleur logo media -->
+  
   <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
 </head>
 
@@ -48,8 +48,12 @@
                         <h4 class="card-title">Cahier des charges </h4>
                         <p class="card-text">On a fait un cahiers des charges pour notre vous pouvez le télecharger.</p>
                         <div class="text-center">
-                            <a href="/images/Cahier_des_charges_-_reseau.docx" class="btn btn-success">Link </a>
-                            
+                            <div class="container">
+                                <button type="button" class="button"
+                                    onclick="window.location.href='/images/Cahier_des_charges_-_reseau.docx'">
+                                    <span>Voir!</span>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -63,7 +67,13 @@
                         <h4 class="card-title">Résaux</h4>
                         <p class="card-text">On a aussi fait quelques exercices sur une application nomme Cisco Paket Tracer. </p>
                         <div class="text-center">
-                            <a href="/images/cisco.png" class="btn btn-success">Link</a>
+                            
+                            <div class="container">
+                                <button type="button" class="button"
+                                    onclick="window.location.href='/images/cisco.png'">
+                                    <span>Voir!</span>
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
