--- a/bloc/web.html
+++ b/bloc/web.html
@@ -1,5 +1,5 @@
  <!-- lien  css  -->
- <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="stylegolan.css">
  <!-- bootstrap CDN -->
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -48,8 +48,12 @@
                        <h4 class="card-title">Site Nike</h4>
                        <p class="card-text">J'ai réussit à reproduire le site nike .</p>
                        <div class="text-center">
-                           <a href="nike.html" class="btn btn-success">Link </a>
-                           
+                           <div class="container">
+                            <button type="button" class="button"
+                                onclick="window.location.href='nike.html'">
+                                <span>Voir!</span>
+                            </button>
+                        </div>
                        </div>
                    </div>
                </div>
@@ -63,7 +67,12 @@
                        <h4 class="card-title">Site Apple</h4>
                        <p class="card-text">J'ai réussit à reproduire le site apple. </p>
                        <div class="text-center">
-                           <a href="apple.html" class="btn btn-success">Link</a>
+                        <div class="container">
+                            <button type="button" class="button"
+                                onclick="window.location.href='apple.html'">
+                                <span>Voir!</span>
+                            </button>
+                        </div>
                        </div>
                    </div>
                </div>
