--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="style.css">
     <!-- bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+ 
     <!-- couleur logo media -->
-    <!-- script js -->
+    <!-- script js navbar bas-->
     <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
     <!--police ecriture-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,24 +61,12 @@
             <!-- afficher la date et l'heure -->
             <div class="date-time">
                 <p id="date"></p>
-                <p id="time"></p>
+                <p id="time"></p> 
             </div>
             <script src="script/scriptheure&date.js"></script>
 
 
-            <!-- barre de recherche -->
-            <div class="search-box">
-                <input type="text" placeholder="Search">
-                <button class="search-button"><i class="fas fa-search"></i></button>
-            </div>
-
-            <script src="script/scriptbarrerecherche.js"></script>
-
-
-
             <!--catégorie-->
-
-
 
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -122,7 +110,7 @@
     <!-- about -->
     <!-- page about -->
     <section id="about">
-        <div class="container mt-4 pt-4">
+        <div class="container mt-4 pt-4">     
             <h1 class="text-center">A propos de moi</h1>
             <div class="row mt-4">
                 <div class="col-lg-4">
@@ -133,14 +121,14 @@
                 <div class="col-lg-8">
                     <p> Je m'apelle BAAYVIN SOUBRAMANIEN j'ai 19 ans est je suis en 1ere année en Informatique chez
                         Paris Ynov Campus. Par le passée il y an 1 ans j'ai obtenu mon Bacalauréat Scientifique avec les
-                        spécialités Mathématiques et Science de l'Ingénieur.
+                        spécialités Mathématiques et Science de l'Ingénieur. 
 
                     </p>
                     <div class="row mt-3">
                         <div class="col-md-6">
                             <ul>
                                 <li>Nom: Baayvin SOUBRAMANIEN</li>
-                                <li>Age: 18</li>
+                                <li>Age: 19</li>
                                 <li>Status: Etudiant 1ere année en Informatique à YNOV </li>
 
                             </ul>
@@ -290,7 +278,7 @@
                                         <span>Voir!</span>
                                     </button>
                                 </div>
-                            </div>
+                            </div>  
                         </div>
                     </div>
                 </div>
@@ -308,7 +296,7 @@
                                 <p class="card-text">J'ai pratiquer le Linux peandant le premier semestre a ynov.</p>
                                 <div class="text-center">
                                     <div class="container">
-                                        <button type="button" class="button"
+                                        <button type="button" class="button" 
                                             onclick="window.location.href='/bloc/linux.html'">
                                             <span>Voir!</span>
                                         </button>
@@ -335,7 +323,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div>.
                     </div>
 
                     <div class="col-lg-4 mt-4">
